# multi-registry-cache

./: .dockerignore  .gitignore  CLAUDE.md  CONFIG.md  LICENSE  README.md  UPGRADING.md  config.sample.yaml  functions.py  generate.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-publish.yaml  publish-pypi.yaml  release.yaml
docker/: Dockerfile  entrypoint.sh
docs/: architecture.md  cli.md  configuration.md  contributing.md  index.md  internals.md  runtime-configuration.md  storage-backends.md  tls-ssl.md  upgrading.md
maintenance/: __init__.py  cleanup.py
src/multi_registry_cache/: __init__.py  cli.py  functions.py  generate.py  setup_wizard.py
tests/: conftest.py  test_cleanup.py  test_functions.py  test_generate.py
